--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
   <div class="wrapper">
+  <div class="container">
     <div class="attention">
       <h2 class="title">Внимание!</h2>
-      <p class="content">Препарат является сильно действющим средством, которое оказывает такой-то и такой-то эффект, раскрываем выгоды от применения. Применяйте согласно инструкции для макисмального эффекта Препарат является сильно действющим средством, которое оказывает такой-то и такой-то эффект, раскрываем выгоды от применения. Применяйте согласно инструкции для макисмального эффекта</p>
+      <p class="content">Препарат является сильно действющим средством, которое оказывает такой-то и такой-то эффект, раскрываем выгоды от применения.</p>
       <button class="btn-close"></button>
     </div>
     <div class="features">
@@ -31,8 +32,10 @@
       <h3>Венодон &mdash; красивые ноги без варикоза</h3>
       за счет уникальных свойств амранта
     </div>    
+    </div>
     <div class="layout-columns">
       <div class="layout-column">
+      <div class="product">
         <ul class="description-list">
           <li class="description-item">Убирает синие вены и сосудистые звуздочки <span>за 3-4 применения</span></li>
           <li class="description-item"><span>Заживляет</span> трофические язвы</li>
@@ -42,10 +45,27 @@
           <li class="description-item">Содержит чамое полезное при варикозе растение</li>
         </ul>
         <div class="certicicates">
-          <img src="placehold.it/" alt="" />
-        </div>
+          <img src="img/gmp-logo.png" width="64" height="64" alt="GMP" />
+          <img src="img/iso-logo.png" width="64" height="64" alt="ISO" />
+          <img src="img/ti-logo.png" width="64" height="64" alt="Green" />
+          <img src="img/product-logo.png" width="64" height="64" alt="Best-Product" />
+          <img src="img/bio-logo.png" width="64" height="64" alt="Bio" />
+        </div>        
       </div>
-      <div class="layout-column"></div>
+      </div>
+      <div class="layout-column">
+      Закажиет <span class="uppercase">Венодон</span>
+      и избавьтесь от варикоза
+
+      <fieldset>
+      <legend>Для заказа введите ваш номер телефона:</legend>
+        <form action="order" method="post">
+          <input type="text" name="phone" placeholder="+7(___)___-__-__">
+          <button type="submit">Заказать <span class="uppercase">Венодон</span> <span class="red">со скидко 50%</span></button>
+        </form>        
+      </fieldset>
+      На этой неделе куплено уже: <span>105 шт.</span>
+      </div>
     </div>    
   </div>  
 <script type="text/javascript">
