added form css code

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     </div>    
     </div>
     <div class="layout-columns">
-      <div class="layout-column">
+      <div class="layout-column-left">
       <div class="product">
         <ul class="description-list">
           <li class="description-item">Убирает синие вены и сосудистые звуздочки <span>за 3-4 применения</span></li>
@@ -53,18 +53,35 @@
         </div>        
       </div>
       </div>
-      <div class="layout-column">
-      Закажиет <span class="uppercase">Венодон</span>
-      и избавьтесь от варикоза
+      <div class="layout-column-right">
+        <div class="order-wrapper">
+          <h2 class="order-title">Закажите <span class="uppercase">Венодон<sup>&reg;<sup></span></h2>
+          <h3 class="order-subtitle">и избавьтесь от варикоза<span class="flag-forever">навсегда!</span></h3>
 
-      <fieldset>
-      <legend>Для заказа введите ваш номер телефона:</legend>
-        <form action="order" method="post">
-          <input type="text" name="phone" placeholder="+7(___)___-__-__">
-          <button type="submit">Заказать <span class="uppercase">Венодон</span> <span class="red">со скидко 50%</span></button>
-        </form>        
-      </fieldset>
-      На этой неделе куплено уже: <span>105 шт.</span>
+          <div class="price-wrapper">
+
+            <p class="order-price"><span class="through"><sup>2990</sup></span> 1 490 &#8381;</p>
+            <p class="order-price-decription">+примерная стоимость доставки</p>
+
+          </div>
+          
+          <fieldset class="order-form-wrapper">
+          <legend>Для заказа введите ваш номер телефона:</legend>
+            <form class="order-form" action="order" method="post">
+              <input type="text" class="order-form-field" name="phone" placeholder="+7(___)___-__-__">
+              <div class="date-on-security">
+              <span class="security-brand">Ваши данные под защитой:</span>
+              <i class="icon icon-secur-1">1</i>
+              <i class="icon icon-secur-2">2</i>
+              <i class="icon icon-secur-3">3</i>
+              <i class="icon icon-secur-4">4</i>
+              </div>
+              <button type="submit" class="order-btn">Заказать <span class="uppercase">Венодон</span> <span class="red">со скидко 50%</span></button>
+            </form>        
+          </fieldset>
+          На этой неделе куплено уже: <span>105 шт.</span>
+        </div>
+
       </div>
     </div>    
   </div>  
