--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
       VK.init({apiId: 5903616, onlyWidgets: true});
     </script>
-    <script src="js/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 </head>
 <body>
   <div class="wrapper">
@@ -89,10 +89,10 @@
       </div>
     </div>
   </div>
-  <script src="js/jquery.maskedinput.min.js"></script> 
+  <script type="text/javascript" src="js/jquery.maskedinput.min.js"></script> 
   <script type="text/javascript">
     VK .Widgets.Like("vk_like", {type: "button"});
   </script>
-  <script src="js/main.js"></script> 
+  <script type="text/javascript" src="js/main.js"></script> 
 </body>
 </html>
