--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
     <title>Венодон</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="//vk.com/js/api/openapi.js?139"></script>
-    <script type="text/javascript">
-      VK.init({apiId: 5903616, onlyWidgets: true});
-    </script>
+<!--     <script type="text/javascript">
+  VK.init({apiId: 5903616, onlyWidgets: true});
+</script> -->
     <script src="js/jquery-3.1.1.min.js"></script>
 </head>
 <body>
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="attention">
       <h2 class="title">Внимание!</h2>
-      <p class="content">Препарат является сильно действющим средством, которое оказывает такой-то и такой-то эффект, раскрываем выгоды от применения.</p>
+      <p class="content">Препарат является сильно действющим средством, которое оказывает такой-то и такой-то эффект,<br>раскрываем выгоды от применения.</p>
       <button class="btn-close"></button>
     </div>
     <div class="features">
@@ -27,7 +27,7 @@
         <li class="features__item"><i class="icon icon-hand"></i>Свыше 19000<br>довольных покупателей</li>
       </ul>
       <div class="user-block"> 
-        <div id="vk_like"></div>
+<!--         <div id="vk_like"></div> -->
         <a href="#form" class="order-call">Заказать звонок</a>
       </div>    
     </div>
@@ -86,9 +86,9 @@
     </div>
   </div>
   <script src="js/jquery.maskedinput.min.js"></script> 
-  <script type="text/javascript">
-    VK .Widgets.Like("vk_like", {type: "button"});
-  </script>
+<!--   <script type="text/javascript">
+  VK .Widgets.Like("vk_like", {type: "button"});
+</script> -->
   <script src="js/main.js"></script> 
 </body>
 </html>
