--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>Венодон</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="//vk.com/js/api/openapi.js?139"></script>
-    <script type="text/javascript">
-      VK.init({apiId: 5903616, onlyWidgets: true});
-    </script>
-    <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
+<!--     <script type="text/javascript">
+  VK.init({apiId: 5903616, onlyWidgets: true});
+</script> -->
+    <script src="js/jquery-3.1.1.min.js"></script>
 </head>
 <body>
   <div class="wrapper">
   <div class="container">
     <div class="attention">
       <h2 class="title">Внимание!</h2>
-      <p class="content">Препарат является сильно действющим средством, которое оказывает такой-то и такой-то эффект, раскрываем выгоды от применения.</p>
+      <p class="content">Препарат является сильно действющим средством, которое оказывает такой-то и такой-то эффект,<br>раскрываем выгоды от применения.</p>
       <button class="btn-close"></button>
     </div>
     <div class="features">
@@ -27,7 +27,7 @@
         <li class="features__item"><i class="icon icon-hand"></i>Свыше 19000<br>довольных покупателей</li>
       </ul>
       <div class="user-block"> 
-        <div id="vk_like"></div>
+<!--         <div id="vk_like"></div> -->
         <a href="#form" class="order-call">Заказать звонок</a>
       </div>    
     </div>
@@ -58,17 +58,13 @@
       </div>
       </div>
       <div class="layout-column-right">
-
         <div class="order">
-
           <h2 class="order__title">Закажите <span class="uppercase">Венодон<sup>&reg;<sup></span></h2>
           <h3 class="order__subtitle">и избавьтесь от варикоза<span class="flag-forever">навсегда!</span></h3>
-
           <div class="order__price">
             <p class="order__price-content"><span class="through"><sup>2990</sup></span> 1 490 &#8381;</p>
             <p class="order__price-decription">+примерная стоимость доставки</p>
-          </div>
-          
+          </div>          
           <fieldset class="order__form-wrapper">
           <legend>Для заказа введите ваш номер телефона:</legend>
             <form class="order__form" action="order" method="post">
@@ -89,10 +85,10 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="js/jquery.maskedinput.min.js"></script> 
-  <script type="text/javascript">
-    VK .Widgets.Like("vk_like", {type: "button"});
-  </script>
-  <script type="text/javascript" src="js/main.js"></script> 
+  <script src="js/jquery.maskedinput.min.js"></script> 
+<!--   <script type="text/javascript">
+  VK .Widgets.Like("vk_like", {type: "button"});
+</script> -->
+  <script src="js/main.js"></script> 
 </body>
 </html>
